# HomeGPT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
.github/workflows/: run-test.yml
ClapDetection/: ClapDetection
Intruder Detection/: CMakeCache.txt  CMakeLists.txt  DatasetCreator  Detector  Makefile  Trainner  cmake_install.cmake  dataset-creator.cpp  detector.cpp  trainner.cpp
Intruder Detection/trainner/: trainner.yml
docs/docbook/: _audio_record_thread_8cpp.xml  _audio_record_thread_8cpp__incl.dot  _audio_record_thread_8h.xml  _audio_record_thread_8h__dep__incl.dot  _audio_record_thread_8h__incl.dot  _audio_record_thread_8h_source.xml  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.xml  _camera_8cpp.xml  _camera_8cpp__incl.dot  _camera_8h.xml  _camera_8h_source.xml  _circular_queue_8h.xml  _circular_queue_8h_source.xml  _clap_detection_8cpp.xml  _clap_detection_8cpp__incl.dot  _clap_detection_8h.xml  _clap_detection_8h__incl.dot  _clap_detection_8h_source.xml  _clap_thread_8cpp.xml  _clap_thread_8h.xml  _clap_thread_8h__dep__incl.dot  _clap_thread_8h_source.xml  _controller_8cpp.xml  _controller_8cpp__incl.dot  _controller_8h.xml  _controller_8h__dep__incl.dot  _controller_8h_source.xml  _controller_thread_8cpp.xml  _controller_thread_8cpp_a20a45737018ec41ab19cb4f5164b26ac_cgraph.dot  _controller_thread_8h.xml  _controller_thread_8h_source.xml  _cpp_thread_8h.xml  _cpp_thread_8h__dep__incl.dot  _cpp_thread_8h__incl.dot  _cpp_thread_8h_source.xml  _cpp_timer_callback_8h.xml  _cpp_timer_callback_8h__incl.dot  _cpp_timer_callback_8h_source.xml  _dataset_creator_8cpp.xml  _dataset_creator_8cpp__incl.dot  (+280 more)
docs/html/: _audio_record_thread_8cpp.html  _audio_record_thread_8h.html  _audio_record_thread_8h_source.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8h.html  _camera_8h.js  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _circular_queue_8h.html  _circular_queue_8h.js  _circular_queue_8h__incl.map  _circular_queue_8h__incl.md5  _circular_queue_8h_source.html  _clap_detection_8cpp.html  _clap_detection_8cpp__incl.map  _clap_detection_8cpp__incl.md5  _clap_detection_8h.html  _clap_detection_8h.js  _clap_detection_8h__dep__incl.map  _clap_detection_8h__dep__incl.md5  _clap_detection_8h__incl.map  _clap_detection_8h__incl.md5  _clap_detection_8h_source.html  _clap_thread_8cpp.html  _clap_thread_8cpp.js  _clap_thread_8cpp__incl.dot  _clap_thread_8cpp__incl.map  _clap_thread_8cpp__incl.md5  _clap_thread_8h.html  _clap_thread_8h.js  _clap_thread_8h__dep__incl.map  _clap_thread_8h__dep__incl.md5  _clap_thread_8h__incl.map  _clap_thread_8h__incl.md5  (+720 more)
docs/rtf/: _camera_8h__dep__incl.dot  _camera_8h__incl.dot  _circular_queue_8h__incl.dot  _clap_detection_8h__dep__incl.dot  _clap_thread_8h__incl.dot  _controller_thread_8cpp_a844160e16f1a3e514df9ce65683e17bd_icgraph.dot  _controller_thread_8h__dep__incl.dot  _controller_thread_8h__incl.dot  _dataset_creator_8h__dep__incl.dot  _dataset_creator_8h__incl.dot  _dataset_trainer_8h__dep__incl.dot  _events_8h__incl.dot  (+130 more)
hardware/: README.md
img/: MQ2_ADC_and_Raspberry_pi.fzz  RFID_RC522_and_Raspberry_pi.fzz
src/: main.cpp
src/Clap Detection/ClapAll/: CMakeCache.txt  CMakeLists.txt  Makefile  clapcustomfft  cmake_install.cmake  detectclap  detectmic  detectmic.cpp  eight.cpp  fifth  fifth.cpp  final  final.cpp  final.py  final_r  first  first.cpp  first.py  fourth  fourth.cpp  ninth  ninth.cpp  paex_record.cpp  plot.cpp  plot.py  saveaudio.cpp  second  second.cpp  second.py  test.out  third  third.cpp  vector_file.txt
src/clap-detection/: CMakeCache.txt  CMakeLists.txt  ClapDetection  ClapDetection.cpp  ClapDetection.h  Makefile  clapcustomfft.cpp  clapfft  clapfft.cpp  cmake_install.cmake  detectClapAMP  detectClapFFT  detectclap  detectclap.cpp  detectmic  eight  fifth  ninth  ninth.cpp  paex_record  paex_record_c  seventh  seventh.cpp  sixth  sixth.cpp
src/controller/: CMakeLists.txt  Controller.cpp  Controller.h
src/dependencies/mfrc522/: CMakeLists.txt  igpio.h  ispi.h  mfrc522.cc  mfrc522.h
src/intruder-detection/: CMakeCache.txt~fa63e57182a359e22231c5529dd24b838cd90bc5  CMakeLists.txt  DatasetCreator  DatasetCreator.cpp  DatasetCreator.h  DatasetTrainer.cpp  DatasetTrainer.h  Detector  IntruderDetection.cpp  IntruderDetection.h  Trainner  dataset-creator.cpp  detector.cpp  trainer.cpp
src/intruder-mood-detection/: CMakeLists.txt  IntruderMoodDetection.cpp  IntruderMoodDetection.h
src/mood-detection/: CMakeLists.txt  MoodDetection.cpp  MoodDetection.h  cmake_install.cmake~fa63e57182a359e22231c5529dd24b838cd90bc5  detection
src/peripherals/: CMakeLists.txt  Camera.cpp  Camera.h  GPIODriver.cpp  GPIODriver.h  I2CDriver.cpp  I2CDriver.h  I2CSensor.h  LEDController.cpp  LEDController.h  MFRC522.cpp  MFRC522.h  RFID.cpp  RFID.h  RelayBoard.cpp  RelayBoard.h  ServoMotor.cpp  ServoMotor.h  bcm2835_gpio_impl.h  bcm2835_spi_impl.h  igpio.h  libmfrc522.cpp
src/peripherals/LEDController/: LEDController.h  LEDMain.cpp  led_test
src/peripherals/bcm2835/: bcm2835_spi_impl.h
src/peripherals/servo-motor/: ServoMotor.cpp  ServoMotor.h  servo_control
src/peripherals/spi/: spidev_impl.h  sys_gpio_impl.h
src/thread/: CMakeLists.txt  ControllerThread.cpp  ControllerThread.h  CppThread.h
src/thread/clap-detection/: AudioRecordThread.cpp  AudioRecordThread.h  ClapThread.cpp  ClapThread.h
src/thread/doors/: DoorsThread.cpp  DoorsThread.h
src/thread/intruder-detection/: IntruderThread.cpp  IntruderThread.h
src/thread/intruder-mood-detection/: IntruderMoodThread.cpp  IntruderMoodThread.h
src/thread/mood-detection/: MoodThread.cpp  MoodThread.h
src/thread/rfid/: RFIDThread.cpp  RFIDThread.h
src/utils/: CMakeLists.txt  CircularQueue.h  CppTimerCallback.h  EventHandler.cpp  EventHandler.h  Events.h  Globals.h  Threads.h
src/utils/EventTest/: .goutputstream-B1D931  EventHandler.cpp  EventHandler.h  EventHandler.tpp  main  main.cpp
test/: CMakeLists.txt
(+435 files in other folders)
