cmake_minimum_required(VERSION 2.8)
project( TrainOpenCV )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DatasetCreator dataset-creator.cpp )
target_link_libraries( DatasetCreator ${OpenCV_LIBS} )
add_executable( Trainner trainner.cpp )
target_link_libraries( Trainner ${OpenCV_LIBS} )
add_executable( Detector detector.cpp )
target_link_libraries( Detector ${OpenCV_LIBS} )